--- a/TeduShop.Data/App.config
+++ b/TeduShop.Data/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <clear/>
-    <add name="TeduShopConnection" connectionString="Data Source=LOCPNH;Initial Catalog=TeduShop;Integrated Security=False; User Id=sa; Password=kh0ngc0pass;MultipleActiveResultSets=True"/>
+    <clear />
+    <add name="TeduShopConnection" providerName="System.Data.SqlClient" connectionString="Data Source=LOCPNH;Initial Catalog=TeduShop;Integrated Security=False;User Id=sa;Password=kh0ngc0pass;MultipleActiveResultSets=True" />
   </connectionStrings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -13,4 +13,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
