--- a/TeduShop.Model/packages.config
+++ b/TeduShop.Model/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Cryptography.Internal" version="5.0.7" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Cryptography.KeyDerivation" version="5.0.7" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
